# bencher

./: .dockerignore  .gitattributes  .gitignore  .gitpod.yml  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  HANDOFF-oci-oauth-docker29.md  LICENSE  LICENSE-PLUS  LICENSE.md  PLAN.md  README.md  REVIEW.md  RUNNER_DESIGN.md  SECURITY.md  action.yml  bencher.session.sql  build.docker-compose.yml  builder.docker-compose.yml  changelog.md  changelog.mdx  clippy.toml  dagger.cue  deny.toml  deploy.docker-compose.yml  develop.sh  docker-compose.yml  docs.docker-compose.yml  flake.nix  index.html  litestream.docker-compose.yml  local.docker-compose.yml  netlify.toml  package-lock.json  package.json  ping  rust-toolchain.toml  rustfmt.toml  tableflow.code-workspace  (+1 more)
bencher/: Cargo.toml  README.md
bencher/src/: error.rs  main.rs
bencher/src/cli/: clap.rs  mod.rs
cli/: Cargo.toml
cli/src/: args.rs  error.rs  lib.rs  main.rs  output.rs  report.rs  tests.rs
cli/src/adapter/: custom.rs  mod.rs  report.rs  rust.rs
cli/src/benchmark/: mod.rs
cli/src/cli/: mod.rs  output.rs  shell.rs
cli/src/command/: mod.rs
cli/src/save/: clone.rs  git.rs  mod.rs  push.rs
cli/src/tool/: mod.rs  rust_bench.rs
client/: Cargo.toml  gatsby-config.js  gatsby-node.js  index.html  package.json  styles.scss  tsconfig.json  types.d.ts
client/src/: account.rs  accounts.rs  institution.rs  institutions.rs  main.rs
client/src/components/: client.tsx
client/src/flows/: flows.ts
client/src/interpreter/: interpreter.ts  interpreter.worker.ts
client/src/pages/: 404.tsx  about.tsx  client.tsx  github.tsx  index.js  index.tsx  licensing.tsx  privacy.tsx  terms.tsx  tour.tsx
client/src/styles/: _variables.sass  _variables.scss
client/src/wasm/: interpreter.bootstrap.ts  interpreter.tsx  interpreter.wasm.ts
client/src/workers/: interpreter.worker.ts
client/test/: flexbox.test.ts
lib/api_auth/: Cargo.toml
lib/api_auth/src/: accept.rs  confirm.rs  github.rs  google.rs  lib.rs  login.rs  signup.rs
lib/api_auth/tests/: accept.rs  auth.rs  confirm.rs  login.rs  oauth.rs  signup.rs
lib/api_checkout/: Cargo.toml
lib/api_checkout/src/: checkout.rs  lib.rs
lib/api_organizations/: Cargo.toml
lib/api_organizations/src/: allowed.rs  claim.rs  lib.rs  members.rs  organizations.rs  plan.rs  projects.rs  sso.rs  usage.rs
lib/api_organizations/tests/: allowed.rs  members.rs  organizations.rs  plan.rs  projects.rs  usage.rs
lib/api_projects/: Cargo.toml
lib/api_projects/src/: alerts.rs  allowed.rs  benchmarks.rs  branches.rs  claim.rs  jobs.rs  keys.rs  lib.rs  macros.rs  measures.rs  metrics.rs  plots.rs  projects.rs  reports.rs  testbeds.rs  thresholds.rs
lib/api_projects/tests/: alerts.rs  benchmarks.rs  branches.rs  jobs.rs  measures.rs  metrics.rs  perf.rs  project_key_auth.rs  projects.rs  reports.rs  testbeds.rs  thresholds.rs
lib/api_run/: Cargo.toml
lib/api_run/src/: lib.rs  run.rs
lib/api_run/tests/: run.rs
lib/api_server/: Cargo.toml
lib/api_server/src/: backup.rs  config.rs  lib.rs  restart.rs  root.rs  spec.rs  stats.rs  version.rs
lib/api_server/tests/: backup.rs  config.rs  replica.rs  restart.rs  root.rs  server.rs  spec.rs  version.rs
lib/api_users/: Cargo.toml
lib/api_users/src/: keys.rs  lib.rs  tokens.rs  users.rs
lib/api_users/tests/: tokens.rs  user_key_auth.rs  users.rs
lib/bencher_adapter/: Cargo.toml
lib/bencher_adapter/benches/: adapter.rs
lib/bencher_adapter/src/: error.rs  lib.rs
lib/bencher_api_tests/: Cargo.toml
lib/bencher_api_tests/src/: context.rs  helpers.rs  lib.rs  oci.rs  seed.rs
lib/bencher_boundary/: Cargo.toml
lib/bencher_boundary/src/: boundary.rs  error.rs  lib.rs  limits.rs  ln.rs  mean.rs  quartiles.rs  validate.rs
lib/bencher_chrome/: Cargo.toml
lib/bencher_chrome/src/: error.rs  lib.rs  types.rs  util.rs  wait.rs
lib/bencher_chrome/tests/: connect_to_url.rs  coverage.rs  events_listeners.rs  expose_function.rs  extension.rs  file_chooser.rs  local_storage.rs  logs.rs  simple.rs
lib/bencher_client/: .gitignore  Cargo.toml  build.rs
lib/bencher_client/src/: client.rs  lib.rs  tls.rs
lib/bencher_comment/: Cargo.toml
lib/bencher_comment/src/: lib.rs
lib/bencher_config/: Cargo.toml
lib/bencher_config/src/: config_tx.rs  lib.rs  plus.rs
lib/bencher_context/: Cargo.toml
lib/bencher_context/src/: lib.rs
lib/bencher_endpoint/: Cargo.toml
lib/bencher_endpoint/src/: endpoint.rs  headers.rs  lib.rs  path_param.rs  registrar.rs  remote_ip.rs  resource.rs  total_count.rs
lib/bencher_fingerprint/: Cargo.toml
lib/bencher_fingerprint/src/: lib.rs  linux.rs  macos.rs  windows.rs
lib/bencher_github/: Cargo.toml
lib/bencher_github/src/: auth.rs  lib.rs
lib/bencher_json/: Cargo.toml
lib/bencher_json/src/: auth.rs  big_int.rs  clock.rs  lib.rs  maybe.rs  nullable.rs  pagination.rs  priority.rs  priority_tier.rs  resource_id.rs  run.rs  typed_db.rs  typed_slug.rs  typed_uuid.rs  urlencoded.rs
lib/bencher_noise/: Cargo.toml
lib/bencher_noise/src/: bmf.rs  lib.rs  report.rs  score.rs
lib/bencher_plot/: Cargo.toml  decimal.json  perf.json  perf_dual_axes.json  perf_log.json
lib/bencher_plot/src/: error.rs  lib.rs  line.rs
lib/bencher_rank/: Cargo.toml
lib/bencher_rank/src/: db.rs  generator.rs  lib.rs
reports/: Cargo.toml
reports/src/: data.rs  lib.rs  metrics.rs
rollback/: Cargo.toml
rollback/src/: account.rs  fund.rs  holding.rs  institution.rs  investment.rs  lib.rs  main.rs  portfolio.rs  ticker.rs  transaction.rs
rollback/src/investments/: account.rs  fund.rs  institution.rs  investment.rs  mod.rs  ticker.rs  total.rs
search/: Cargo.toml
search/src/: index.rs  lib.rs  storage.rs
src/: lib.rs  (+1 more)
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs
xtask/src/parser/: api_docs.rs  live.rs  mod.rs  notify.rs  package.rs  release.rs  template.rs  test.rs  types.rs  version.rs
xtask/src/task/: api_docs.rs  fly_test.rs  fuzz.rs  live.rs  mod.rs  netlify_test.rs  notify.rs  prompt.rs  release_notes.rs  stats.rs  swagger.rs  template.rs  translate.rs  types.rs  typeshare.rs  version.rs
(+9545 files in other folders)
