[workspace]
members = ["services/api", "services/cli", "lib/*", "plus/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.3.13"
authors = ["Everett Pompeii <everett@bencher.dev>"]
edition = "2021"

[workspace.dependencies]
# lib
bencher_adapter = { path = "lib/bencher_adapter" }
bencher_boundary = { path = "lib/bencher_boundary" }
bencher_client = { path = "lib/bencher_client" }
bencher_json = { path = "lib/bencher_json" }
bencher_logger = { path = "lib/bencher_logger" }
bencher_plot = { path = "lib/bencher_plot" }
bencher_rbac = { path = "lib/bencher_rbac" }
bencher_valid = { path = "lib/bencher_valid" }
# plus
bencher_billing = { path = "plus/bencher_billing" }
bencher_license = { path = "plus/bencher_license" }
bencher_plus = { path = "plus/bencher_plus" }
# crates.io
anyhow = "1.0"
async-trait = "0.1"
camino = "1.1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive"] }
derive_more = "0.99"
diesel = "2.1"
jsonwebtoken = "8.3"
literally = "0.1"
once_cell = "1.18"
ordered-float = "4.1"
oso = "0.27"
pretty_assertions = "1.4"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
slog = "2.7"
slug = "0.1"
tabled = "0.14"
thiserror = "1.0"
tokio = "1.32"
typeshare = "1.0"
url = "2.4"
uuid = "1.4"
# github.com
dropshot = { git = "https://github.com/oxidecomputer/dropshot", rev = "bd3bf5853a8fef5757b132cec7f61974bbd37de2" }
progenitor = { git = "https://github.com/oxidecomputer/progenitor", rev = "ca8b4ef6f84760d493001aabee3826e315a84d05" }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor", rev = "ca8b4ef6f84760d493001aabee3826e315a84d05" }

# TODO use this to generate wasm builds
# https://github.com/bencherdev/bencher/issues/48
[profile.release-wasm]
inherits = "release"
opt-level = "s"
