[package]
name = "bencher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Benchmarking Data Tracking"
keywords = ["cli", "bench", "benchmark", "benchmarking", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli", version = "0.1.0" }

[[bin]]
name = "bencher"
