[package]
name = "reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
schema = ["schemars"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.8", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
