[package]
name = "rollback"
version = "0.1.0"
edition = "2021"
description = "restore to a previously defined state"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
search = { path = "../search" }
tinysearch-shared = "0.6.2"
