[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
once_cell = "1.8.0"
tinysearch-shared = "0.6.2"

[dependencies.xorf]
version = "0.7.2"
default-features = false
